@@ -1,3 +1,5 @@
+        compatibility with new Padre (CHORNY)
+
 0.26    2009.11.30
         add JE (Syntax Check)
         
